@@ -1,3 +1,6 @@
+* Tue Jul 23 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.2
+- Remove unnecessary ``data_provider`` key in the metadata.json file.
+
 * Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.1
 - Update the upper bound of stdlib to < 6.0.0
 - Update a URL in the README.md
